# pcm-transport

./: CHANGELOG.md  CMakeLists.txt  README.md
.cursor/rules/: fork-patch-workflow.mdc
data/: org.berestov.pcmtransport.desktop  org.berestov.pcmtransport.gresource.xml
docs/: BACKLOG.md  index.html
include/pcmtp/backend/: AlsaBufferPolicy.hpp  AlsaPcmBackend.hpp  IAudioBackend.hpp
include/pcmtp/core/: PlaybackEngine.hpp
include/pcmtp/cue/: CueParser.hpp
include/pcmtp/decoder/: ExternalAudioDecoder.hpp  FlacStreamDecoder.hpp  GaplessChainDecoder.hpp  IAudioDecoder.hpp  RangeLimitedDecoder.hpp
include/pcmtp/dsp/: ToneControlDesign.hpp
include/pcmtp/gui/: GtkPlayerWindow.hpp
include/pcmtp/mpris/: MprisService.hpp
include/pcmtp/patches/: GtkPlayerFileChooserPatches.hpp  GtkPlayerMediaKeys.hpp  M3uPlaylistExtensions.hpp  MprisStreamPatches.hpp  PatchTrackExtensions.hpp  PlaylistSearchController.hpp  PlaylistSelectionPatches.hpp  PlaylistSessionController.hpp  PlaylistStreamViewPatches.hpp  StreamAudioDecoder.hpp  StreamDecoderFactory.hpp  StreamPlaybackHooks.hpp  StreamPlaybackManager.hpp  StreamPlaylistGlue.hpp  StreamPlaylistUtils.hpp
include/pcmtp/playlist/: M3uPlaylistReader.hpp  MediaProbe.hpp
include/pcmtp/session/: PlaylistSession.hpp
include/pcmtp/stream/: IcyMetadataClient.hpp  StreamHealthRegistry.hpp  StreamSidecar.hpp
include/pcmtp/util/: Logger.hpp  ManagedSubprocess.hpp  MediaUri.hpp  TextEncoding.hpp
src/app/: Application.cpp
src/backend/: AlsaPcmBackend.cpp
src/core/: PlaybackEngine.cpp
src/cue/: CueParser.cpp
src/decoder/: ExternalAudioDecoder.cpp  FlacStreamDecoder.cpp  GaplessChainDecoder.cpp  RangeLimitedDecoder.cpp
src/dsp/: ToneControlDesign.cpp
src/gui/: GtkPlayerWindow.cpp
src/mpris/: MprisService.cpp
src/patches/: GtkPlayerFileChooserPatches.cpp  GtkPlayerMediaKeys.cpp  GtkPlayerWindowDelegates.cpp  M3uPlaylistExtensions.cpp  MprisStreamPatches.cpp  PlaylistSearchController.cpp  PlaylistSelectionPatches.cpp  PlaylistSessionController.cpp  PlaylistStreamViewPatches.cpp  StreamAudioDecoder.cpp  StreamDecoderFactory.cpp  StreamPlaybackHooks.cpp  StreamPlaybackManager.cpp  StreamPlaylistGlue.cpp  StreamPlaylistUtils.cpp
src/playlist/: M3uPlaylistReader.cpp  MediaProbe.cpp
src/session/: PlaylistSession.cpp
src/stream/: IcyMetadataClient.cpp  StreamHealthRegistry.cpp  StreamSidecar.cpp
src/util/: Logger.cpp  ManagedSubprocess.cpp  MediaUri.cpp  TextEncoding.cpp
